--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=mock-psp-example
+server.port=8081
 
 popularpsp.api-server.idempotency-key-name=X-PopularPsp-Idempotency-Key
+webhook.url=http://localhost:8080/api/payment/webhook
