--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=8081
 
 popularpsp.api-server.idempotency-key-name=X-PopularPsp-Idempotency-Key
 webhook.url=http://localhost:8080/api/payment/webhook
+
+url.invalid-access=http://localhost:8081/payment/error
